@@ -101,11 +101,9 @@ HTML;
 $dom->load($str);
 $es = $dom->find('text');
 assert(count($es)==2);
-assert($es[0]->text()=='text1');
 assert($es[0]->innertext=='text1');
 assert($es[0]->outertext=='text1');
 assert($es[0]->plaintext=='text1');
-assert($es[1]->text()=='text2');
 assert($es[1]->innertext=='text2');
 assert($es[1]->outertext=='text2');
 assert($es[1]->plaintext=='text2');
@@ -116,11 +114,9 @@ HTML;
 $dom->load($str);
 $es = $dom->find('b text');
 assert(count($es)==2);
-assert($es[0]->text()=='text1');
 assert($es[0]->innertext=='text1');
 assert($es[0]->outertext=='text1');
 assert($es[0]->plaintext=='text1');
-assert($es[1]->text()=='text2');
 assert($es[1]->innertext=='text2');
 assert($es[1]->outertext=='text2');
 assert($es[1]->plaintext=='text2');
